fixed map alignment, colors and event title

--- a/main.css
+++ b/main.css
@@ -120,9 +120,17 @@ input[type="submit"] {
 .panel-group .panel-heading+.panel-collapse>.panel-body {
 	border-style: none;
 }
-
+.date-color{
+    font-weight: bold;
+    color: dodgerblue;
+}
 .offer {
 	background: linear-gradient(to right, #063555, #095b82);
+}
+.offer-title{
+    font-size: 2rem;
+    font-weight: bold;
+    color: dodgerblue;
 }
 .offer-event {
 	margin-left: 0.5rem;
@@ -135,8 +143,8 @@ input[type="submit"] {
 	margin: 1rem auto;
 }
 #map {
-	height: 26em;
-	width: 26em;
+	height:15em;
+	width: 100%;
 	margin: 0 auto;
 }
 .accordion-toggle {
